# sudoaudit

./: Cargo.toml  contract.sol  report.md  vinner.sol
contract/mythril-report/: contract_mythril_report.html  contract_mythril_report.md
contract/slither-report/: contract_slither_report.html  contract_slither_report.md
src/: main.rs
src/components/: analyzer.rs  cli.rs  compiler.rs  generator.rs  installer.rs  mod.rs  reporter.rs  serialize.rs
vinner/mythril-report/: vinner_mythril_report.html  vinner_mythril_report.md
