[package]
name = "sudoaudit"
version = "0.1.0"
edition = "2021"

[dependencies]

which = "6.0.1"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.42", features = ["cargo", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
dirs = "6.0.0"
markdown = "1.0.0"
